--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
     <!--end navbar-->
     <!-- jumbotron -->
-    <div class="countainer jumbotron text-center">
+    <div class="countainer jumbotron text-center overflow-hidden">
         <div class="row">
             <div class="col-4">
                 <img src="kamil.png" alt="Kamil" width="200" class="rounded-circle img-thumbnail" />
