--- a/index.html
+++ b/index.html
@@ -37,21 +37,19 @@
     </nav>
     <!--end navbar-->
     <!-- jumbotron -->
-    <div class="countainer jumbotron text-center overflow-hidden">
+    <div class="countainer jumbotron overflow-hidden">
         <div class="row">
-            <div class="col-4">
-                <img src="kamil.png" alt="Kamil" width="200" class="rounded-circle img-thumbnail" />
+            <div class="text-center">
+                <img src="kamil.jpg" alt="Kamil" width="200" class="rounded-circle img-thumbnail" />
                 <h1 class="display-4">Kamil Hidayat</h1>
                 <p class="lead">Student | Web Developer</p>
             </div>
-            <div class="col-6">
-                <div class="row justify-content-end mb5">
-                    <p class="col-4">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore impedit nihil officia provident suscipit laudantium! Commodi officia debitis earum suscipit, dolorem quibusdam vero nisi fuga a, voluptas porro quis natus.
-                    </p>
-                    <p class="col-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque inventore quas sequi aperiam fugiat explicabo quisquam excepturi, suscipit numquam esse?</p>
-                </div>
-            </div>
+            <iv class="row align-content-center flex-column">
+                <p class="col-4">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore impedit nihil officia provident suscipit laudantium! Commodi officia debitis earum suscipit, dolorem quibusdam vero nisi fuga a, voluptas porro quis natus.
+                </p>
+                <p class="col-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque inventore quas sequi aperiam fugiat explicabo quisquam excepturi, suscipit numquam esse?</p>
+            </iv>
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
