--- a/index.html
+++ b/index.html
@@ -38,29 +38,32 @@
     <!--end navbar-->
     <!-- jumbotron -->
     <div class="countainer jumbotron overflow-hidden">
-        <div class="row">
-            <div class="text-center">
-                <img src="kamil.jpg" alt="Kamil" width="200" class="rounded-circle img-thumbnail" />
-                <h1 class="display-4">Kamil Hidayat</h1>
-                <p class="lead">Student | Web Developer</p>
-            </div>
-            <iv class="row align-content-center flex-column">
-                <p class="col-4">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore impedit nihil officia provident suscipit laudantium! Commodi officia debitis earum suscipit, dolorem quibusdam vero nisi fuga a, voluptas porro quis natus.
-                </p>
-                <p class="col-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque inventore quas sequi aperiam fugiat explicabo quisquam excepturi, suscipit numquam esse?</p>
-            </iv>
+        <div class="text-center">
+            <img src="kamil.jpg" alt="Kamil" width="200" class="rounded-circle img-thumbnail" />
+            <h1 class="display-4">Kamil Hidayat</h1>
+            <p class="lead">Student | Web Developer</p>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#ffffff"
-          fill-opacity="2"
-          d="M0,160L0,256L57.6,256L57.6,160L115.2,160L115.2,224L172.8,224L172.8,32L230.4,32L230.4,64L288,64L288,192L345.6,192L345.6,320L403.2,320L403.2,192L460.8,192L460.8,32L518.4,32L518.4,160L576,160L576,0L633.6,0L633.6,256L691.2,256L691.2,128L748.8,128L748.8,0L806.4,0L806.4,192L864,192L864,320L921.6,320L921.6,256L979.2,256L979.2,224L1036.8,224L1036.8,96L1094.4,96L1094.4,128L1152,128L1152,0L1209.6,0L1209.6,128L1267.2,128L1267.2,64L1324.8,64L1324.8,96L1382.4,96L1382.4,96L1440,96L1440,320L1382.4,320L1382.4,320L1324.8,320L1324.8,320L1267.2,320L1267.2,320L1209.6,320L1209.6,320L1152,320L1152,320L1094.4,320L1094.4,320L1036.8,320L1036.8,320L979.2,320L979.2,320L921.6,320L921.6,320L864,320L864,320L806.4,320L806.4,320L748.8,320L748.8,320L691.2,320L691.2,320L633.6,320L633.6,320L576,320L576,320L518.4,320L518.4,320L460.8,320L460.8,320L403.2,320L403.2,320L345.6,320L345.6,320L288,320L288,320L230.4,320L230.4,320L172.8,320L172.8,320L115.2,320L115.2,320L57.6,320L57.6,320L0,320L0,320Z"
-        ></path>
-      </svg>
     </div>
     <!-- akhir jumbotron -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
+    <div class="skill">
+        <h1>Abilities</h1>
+        <div>
+            <h4>Technology Skill</h4>
+            <div class="skills">
+                <ul>
+                    <b>Programming Language</b>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Java Script</li>
+                    <li>Phyton</li>
+                    <li>C#</li>
+                    <li>C++</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
