--- a/index.html
+++ b/index.html
@@ -23,13 +23,10 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">portofolio</a>
+                        <a class="nav-link" href="#">Achievement & Certificate</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Disabled</a>
+                        <a class="nav-link" href="#">About Me</a>
                     </li>
                 </ul>
             </div>
@@ -49,7 +46,35 @@
 
     <div class="skill">
         <h1>Abilities</h1>
-        <div>
+        <div class="column">
+            <h4>Technology Skill</h4>
+            <div class="skills">
+                <ul>
+                    <b>Programming Language</b>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Java Script</li>
+                    <li>Phyton</li>
+                    <li>C#</li>
+                    <li>C++</li>
+                </ul>
+            </div>
+        </div>
+        <div class="column">
+            <h4>Technology Skill</h4>
+            <div class="skills">
+                <ul>
+                    <b>Programming Language</b>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Java Script</li>
+                    <li>Phyton</li>
+                    <li>C#</li>
+                    <li>C++</li>
+                </ul>
+            </div>
+        </div>
+        <div class="column">
             <h4>Technology Skill</h4>
             <div class="skills">
                 <ul>
