--- a/index.html
+++ b/index.html
@@ -49,42 +49,39 @@
         <div class="column">
             <h4>Technology Skill</h4>
             <div class="skills">
-                <ul>
-                    <b>Programming Language</b>
+                <li>Digital Mapping and Survey</li>
+                <li>Editing Photo & Video</li>
+                <li>Microsoft Office</li>
+                <li>Programming Language :</li>
+                <div class="subs">
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>Java Script</li>
                     <li>Phyton</li>
                     <li>C#</li>
                     <li>C++</li>
+                </div>
+            </div>
+        </div>
+        <div class="column">
+            <h4>Language Skill</h4>
+            <div class="skills">
+                <ul>
+                    <li>Bahasa Indonesia (active)</li>
+                    <li>English (passive)</li>
+                    <li>Japan 日本語 (semi active)</li>
                 </ul>
             </div>
         </div>
         <div class="column">
-            <h4>Technology Skill</h4>
+            <h4>Interpersonal Skill</h4>
             <div class="skills">
                 <ul>
-                    <b>Programming Language</b>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Java Script</li>
-                    <li>Phyton</li>
-                    <li>C#</li>
-                    <li>C++</li>
-                </ul>
-            </div>
-        </div>
-        <div class="column">
-            <h4>Technology Skill</h4>
-            <div class="skills">
-                <ul>
-                    <b>Programming Language</b>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Java Script</li>
-                    <li>Phyton</li>
-                    <li>C#</li>
-                    <li>C++</li>
+                    <li>Leadership</li>
+                    <li>Team work</li>
+                    <li>Problem Solvers</li>
+                    <li>Committed</li>
+                    <li>Respectful</li>
                 </ul>
             </div>
         </div>
