--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Achievement & Certificate</a>
+                        <a class="nav-link" href="personal.html">Personal Data</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About Me</a>
@@ -43,24 +43,36 @@
     </div>
     <!-- akhir jumbotron -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-
+    <!-- Isi-->
+    <div class="skill">
+        <h1>Educational Background</h1>
+        <li>SD N Tegowanuh</li>
+        <li>SMP N 2 Temanggung</li>
+        <li>SMK N 1 Temanggung</li>
+    </div>
+    <div class="skill">
+        <h1>Academic Achievement</h1>
+        <p>1st place in the provincial level digital farming student skills competition at 2020</p>
+    </div>
     <div class="skill">
         <h1>Abilities</h1>
         <div class="column">
             <h4>Technology Skill</h4>
             <div class="skills">
-                <li>Digital Mapping and Survey</li>
-                <li>Editing Photo & Video</li>
-                <li>Microsoft Office</li>
-                <li>Programming Language :</li>
-                <div class="subs">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Java Script</li>
-                    <li>Phyton</li>
-                    <li>C#</li>
-                    <li>C++</li>
-                </div>
+                <ul>
+                    <li>Digital Mapping and Survey</li>
+                    <li>Editing Photo & Video</li>
+                    <li>Microsoft Office</li>
+                    <li>Programming Language :</li>
+                    <ul class="subs">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Java Script</li>
+                        <li>Phyton</li>
+                        <li>C#</li>
+                        <li>C++</li>
+                    </ul>
+                </ul>
             </div>
         </div>
         <div class="column">
