--- a/personal.html
+++ b/personal.html
@@ -20,10 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="personal.html">Personal Data</a>
+                        <a class="nav-link active" aria-current="page" href="personal.html">Personal Data</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About Me</a>
@@ -32,7 +29,10 @@
             </div>
         </div>
     </nav>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <!-- Isi-->
     <!--end navbar-->
+    <div></div>
 </body>
 
 </html>
