--- a/personal.html
+++ b/personal.html
@@ -32,7 +32,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <!-- Isi-->
     <!--end navbar-->
-    <div></div>
+    <div>
+        <h1>Pesonal Data</h1>
+        <p>Name</p>
+    </div>
 </body>
 
 </html>
