--- a/personal.html
+++ b/personal.html
@@ -9,33 +9,54 @@
     <title>Kamil Hidayat</title>
 </head>
 
-<body>
-    <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">Kamil Hidayat</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<body class="overflow-hidden">
+    <div>
+        <!--Navbar-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">Kamil Hidayat</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="personal.html">Personal Data</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About Me</a>
-                    </li>
-                </ul>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="personal.html">Personal Data</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About Me</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+        </nav>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+        <!-- Isi-->
+        <!--end navbar-->
+        <div class="dataperson">
+            <h1>Pesonal Data</h1>
+            <p> </p>
+            <p>Religion : Islam</p>
+            <p>Height : 168cm</p>
+            <p>Weight : 65kg</p>
+            <p>Address : Dsn.Karanganyar, RT3/RW5, Tegowanuh, Kaloran, Temanggung</p>
+            <p>Phone Number : +6282251189477</p>
+            <p>Marital Status : Not Married</p>
+            <p>Nationality : Indonesia</p>
+            <p>Email : kamilhidayat.890@gmail.com</p>
         </div>
-    </nav>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-    <!-- Isi-->
-    <!--end navbar-->
-    <div>
-        <h1>Pesonal Data</h1>
-        <p>Name</p>
-    </div>
+        <div>
+            <dl class="row justify-content-md-center">
+                <dt class="col-sm-3">Name :</dt>
+                <dd class="col-sm-9">Kamil Hidayat</dd>
+                <dt class="col-sm-3">Place and Date of Birth : </dt>
+                <dd class="col-sm-9">Lamongan, 19 September 2002</dd>
+                <dt class="col-sm-3">Gender :</dt>
+                <dd class="col-sm-9">Male</dd>
+                <dt class="col-sm-3">Description lists</dt>
+                <dd class="col-sm-9">A description list is perfect for defining terms.</dd>
+            </dl>
+        </div>
 </body>
 
 </html>
