--- a/personal.html
+++ b/personal.html
@@ -9,7 +9,7 @@
     <title>Kamil Hidayat</title>
 </head>
 
-<body class="overflow-hidden">
+<body>
     <div>
         <!--Navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
@@ -33,19 +33,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
         <!-- Isi-->
         <!--end navbar-->
-        <div class="dataperson">
-            <h1>Pesonal Data</h1>
-            <p> </p>
-            <p>Religion : Islam</p>
-            <p>Height : 168cm</p>
-            <p>Weight : 65kg</p>
-            <p>Address : Dsn.Karanganyar, RT3/RW5, Tegowanuh, Kaloran, Temanggung</p>
-            <p>Phone Number : +6282251189477</p>
-            <p>Marital Status : Not Married</p>
-            <p>Nationality : Indonesia</p>
-            <p>Email : kamilhidayat.890@gmail.com</p>
-        </div>
-        <div>
+        <div class="overflow-hidden">
             <dl class="row justify-content-md-center">
                 <dt class="col-sm-3">Name :</dt>
                 <dd class="col-sm-9">Kamil Hidayat</dd>
@@ -53,8 +41,22 @@
                 <dd class="col-sm-9">Lamongan, 19 September 2002</dd>
                 <dt class="col-sm-3">Gender :</dt>
                 <dd class="col-sm-9">Male</dd>
-                <dt class="col-sm-3">Description lists</dt>
-                <dd class="col-sm-9">A description list is perfect for defining terms.</dd>
+                <dt class="col-sm-3">Religion :</dt>
+                <dd class="col-sm-9">Islam</dd>
+                <dt class="col-sm-3">Height :</dt>
+                <dd class="col-sm-9">168cm</dd>
+                <dt class="col-sm-3">Weight : </dt>
+                <dd class="col-sm-9">65kg</dd>
+                <dt class="col-sm-3">Address :</dt>
+                <dd class="col-sm-9">Dsn.Karanganyar, RT3/RW5, Tegowanuh, Kaloran, Temanggung</dd>
+                <dt class="col-sm-3">Phone Number :</dt>
+                <dd class="col-sm-9">+6282251189477</dd>
+                <dt class="col-sm-3">Marital Status :</dt>
+                <dd class="col-sm-9">Not Married</dd>
+                <dt class="col-sm-3">Nationality :</dt>
+                <dd class="col-sm-9">Indonesia</dd>
+                <dt class="col-sm-3">Email :</dt>
+                <a href="mailto: kamilhidayat.890@gmal.com" class="col-sm-9 link-dark">kamilhidayat.890@gmail.com</a>
             </dl>
         </div>
 </body>
