--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
     <div class="skill">
         <h1>Abilities</h1>
-        <div class="column">
+        <div class="column border border-white">
             <h4>Technology Skill</h4>
             <div class="skills">
                 <ul>
@@ -72,7 +72,7 @@
                 </ul>
             </div>
         </div>
-        <div class="column">
+        <div class="column border border-white">
             <h4>Language Skill</h4>
             <div class="skills">
                 <ul>
@@ -82,7 +82,7 @@
                 </ul>
             </div>
         </div>
-        <div class="column">
+        <div class="column border border-white">
             <h4>Interpersonal Skill</h4>
             <div class="skills">
                 <ul>
