--- a/personal.html
+++ b/personal.html
@@ -33,7 +33,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
         <!-- Isi-->
         <!--end navbar-->
-        <div class="overflow-hidden">
+        <div class="overflow-hidden m-4">
+            <img src="kamil.jpg" alt="Kamil" width="200" class="rounded-circle img-thumbnail" />
+            <h1>Personal Data</h1>
             <dl class="row justify-content-md-center">
                 <dt class="col-sm-3">Name :</dt>
                 <dd class="col-sm-9">Kamil Hidayat</dd>
