--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- akhir jumbotron -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <!-- Isi-->
-    <div class="d-flex m-2 overflow-hidden">
+    <div class="d-flex overflow-hidden">
         <div class="skill">
             <h1>Educational Background</h1>
             <li>SD N Tegowanuh</li>
