--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <!-- Isi-->
     <div class="d-flex overflow-hidden">
-        <div class="skill col">
+        <div class="skill">
             <h1>Educational Background</h1>
             <li>SD N Tegowanuh</li>
             <li>SMP N 2 Temanggung</li>
