--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <!-- Isi-->
     <div class="d-flex overflow-hidden">
-        <div class="skill">
+        <div class="edukasi">
             <h1>Educational Background</h1>
             <li>SD N Tegowanuh</li>
             <li>SMP N 2 Temanggung</li>
             <li>SMK N 1 Temanggung</li>
         </div>
-        <div class="skill">
+        <div class="achievment">
             <h1>Academic Achievement</h1>
             <p>1st place in the provincial level digital farming student skills competition at 2020</p>
         </div>
