--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="personal.html">Personal Data</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About Me</a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -40,7 +37,9 @@
     </div>
     <!-- akhir jumbotron -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-    <!-- Isi-->
+    <!--cerita-->
+    <div></div>
+    <!--isi-->
     <div class="d-flex overflow-hidden">
         <div class="edukasi">
             <h1>Educational Background</h1>
