--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
         <div class="text-center">
             <img src="kamil.jpg" alt="Kamil" width="200" class="rounded-circle img-thumbnail" />
             <h1 class="display-4">Kamil Hidayat</h1>
-            <p class="lead">Student | Web Developer</p>
+            <p class="lead">Student | Programmer</p>
         </div>
     </div>
     <!-- akhir jumbotron -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <!--cerita-->
-    <div></div>
     <!--isi-->
     <div class="d-flex overflow-hidden">
         <div class="edukasi">
@@ -87,7 +86,6 @@
             <h4>Interpersonal Skill</h4>
             <div class="skills">
                 <ul>
-                    <li>Leadership</li>
                     <li>Team work</li>
                     <li>Problem Solvers</li>
                     <li>Committed</li>
