--- a/personal.html
+++ b/personal.html
@@ -55,7 +55,7 @@
                 <dt class="col-sm-3">Nationality :</dt>
                 <dd class="col-sm-9">Indonesia</dd>
                 <dt class="col-sm-3">Email :</dt>
-                <a href="mailto: kamilhidayat.890@gmal.com" class="col-sm-9 link-dark">kamilhidayat.890@gmail.com</a>
+                <a href="mailto: kamilhidayat.890@gmail.com" class="col-sm-9 link-dark">kamilhidayat.890@gmail.com</a>
             </dl>
         </div>
 </body>
