--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="text-center">
             <img src="kamil.jpg" alt="Kamil" width="200" class="rounded-circle img-thumbnail" />
             <h1 class="display-4">Kamil Hidayat</h1>
-            <p class="lead">Student | Programmer</p>
+            <p class="lead">Finance | Programmer</p>
         </div>
     </div>
     <!-- akhir jumbotron -->
