--- a/personal.html
+++ b/personal.html
@@ -49,7 +49,7 @@
                 <dt class="col-sm-3">Address :</dt>
                 <dd class="col-sm-9">Dsn.Karanganyar, RT3/RW5, Tegowanuh, Kaloran, Temanggung</dd>
                 <dt class="col-sm-3">Phone Number :</dt>
-                <dd class="col-sm-9">+6282251189477</dd>
+                <a href="mailto: +6282251189477" class="col-sm-9 link-dark">+6282251189477</a>
                 <dt class="col-sm-3">Marital Status :</dt>
                 <dd class="col-sm-9">Not Married</dd>
                 <dt class="col-sm-3">Nationality :</dt>
