--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <ul>
                     <li>Bahasa Indonesia (active)</li>
                     <li>English (passive)</li>
-                    <li>Japan 日本語 (semi active)</li>
+                    <li>Japan 日本語 (passive)</li>
                 </ul>
             </div>
         </div>
