--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>Java Script</li>
+                        <li>PhP</li>
                         <li>Phyton</li>
                         <li>C#</li>
                         <li>C++</li>
