Main Ubah alamat

--- a/personal.html
+++ b/personal.html
@@ -47,7 +47,7 @@
                 <dt class="col-sm-3">Weight : </dt>
                 <dd class="col-sm-9">65kg</dd>
                 <dt class="col-sm-3">Address :</dt>
-                <dd class="col-sm-9">Dsn.Karanganyar, RT3/RW5, Tegowanuh, Kaloran, Temanggung</dd>
+                <dd class="col-sm-9">Perum Mekar Asri 2 Blok 12 No 2, Kel. Mekar Bakti, Kec. Panongan, Kab. Tangerang</dd>
                 <dt class="col-sm-3">Phone Number :</dt>
                 <a href="tel: +6282251189477" class="col-sm-9 link-dark">+6282251189477</a>
                 <dt class="col-sm-3">Marital Status :</dt>
