--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                     <li>Phyton</li>
                     <li>C#</li>
                     <li>C++</li>
+                    <li>Finance</li>
                 </ul>
             </div>
         </div>
