--- a/index.html
+++ b/index.html
@@ -92,12 +92,11 @@
                 </ul>
             </div>
         </div>
-        <div class="d-flex overflow-hidden">
+        <div class="overflow-hidden">
             <div class="Experience">
                 <h1>Experience</h1>
-                <li><p>Finance<p><br>
-                <p>PT. Chinli Plastic Technology Indonesia from June 2022 until now</p></li>
-            </div>
+                <p>Finance<p>
+                <p>PT. Chinli Plastic Technology Indonesia from June 2022 until now</p>
         </div>
     </div>
 </body>
