--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
         </div>     
     </div>
-    <div class="column">
+    <div class="clearfix">
         <div class="Experience">
             <h1>Experience</h1>
             <p>Finance<p>
