--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <p>1st place in the provincial level digital farming student skills competition at 2020</p>
         </div>
     </div>
-    <div class="m-3 col">
+    <div class="m-3 col sticky-md-top">
         <h1>Abilities</h1>
         <div class="column border border-white">
             <h4>Technology Skill</h4>
