--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </ul>
             </div>
         </div>
-        <div class="column border border-white fixed-bottom">
+        <div class="column border border-white">
             <h4>Interpersonal Skill</h4>
             <div class="skills">
                 <ul>
