--- a/index.html
+++ b/index.html
@@ -63,10 +63,8 @@
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>Java Script</li>
-                    <li>PhP</li>
-                    <li>Phyton</li>
-                    <li>C#</li>
-                    <li>C++</li>
+                    <li>PHP</li>
+                    <li>Java</li>
                 </ul>
             </div>
         </div>
@@ -96,7 +94,15 @@
         <div class="Experience">
             <h1>Experience</h1>
             <p>Finance<p>
-            <p>PT. Chinli Plastic Technology Indonesia from June 2022 until now</p>
+            <p>PT. Chinli Plastic Technology Indonesia from June 2022 until Feb 2024</p>
+            
+                                                                                   </div>
+        <div class="Experience">
+            <h1>Experience</h1>
+            <p>IT (Programmer & Infrastructure)<p>
+            <p>PT. Chinli Plastic Technology Indonesia from Feb 2024 until now</p>
+            
+                                                                                   </div>
     </div>
 </body>
 
