--- a/personal.html
+++ b/personal.html
@@ -47,7 +47,7 @@
                 <dt class="col-sm-3">Weight : </dt>
                 <dd class="col-sm-9">72kg</dd>
                 <dt class="col-sm-3">Address :</dt>
-                <dd class="col-sm-9">Perum Mekar Asri 2 Blok 12 No 2, Kel. Mekar Bakti, Kec. Panongan, Kab. Tangerang</dd>
+                <dd class="col-sm-9">Perum Mekar Asri 2 Blok E6 No 3, Kel. Mekar Bakti, Kec. Panongan, Kab. Tangerang</dd>
                 <dt class="col-sm-3">Phone Number :</dt>
                 <a href="tel: +6285157389112" class="col-sm-9 link-dark">+6285157389112</a>
                 <dt class="col-sm-3">Marital Status :</dt>
@@ -55,7 +55,7 @@
                 <dt class="col-sm-3">Nationality :</dt>
                 <dd class="col-sm-9">Indonesia</dd>
                 <dt class="col-sm-3">Email :</dt>
-                <a href="mailto: kamilhidayat.890@gmail.com" class="col-sm-9 link-dark">kamilhidayat.890@gmail.com</a>
+                <a href="mailto: kamilhidayat.890@gmail.com" class="col-sm-9 link-dark">kamilhidayat69@gmail.com</a>
             </dl>
         </div>
 </body>
